bad/assign_func_call_class_void.example_compiler_output
ERROR
[1mbad/assign_func_call_class_void.lat:8:8: [1;31merror: [0;1mleft side is not assignable[m
	foo() = vfunc();
	      [1;32m^[m
[1mbad/assign_func_call_class_void.lat:8:2: [1;34mnote: [0;1mleft side starts here[m
	foo() = vfunc();
	[1;32m^[m
